--- a/css/j-forms.css
+++ b/css/j-forms.css
@@ -1,4 +1,19 @@
+.sidebar::-webkit-scrollbar-track, body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
 
+.sidebar::-webkit-scrollbar, body::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
 
 .contact-forms .input { position:relative; }
 
