--- a/css/owner.css
+++ b/css/owner.css
@@ -1,3 +1,21 @@
+
+.sidebar::-webkit-scrollbar-track, body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar, body::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
+
 .logo {
 	width: 90px;
 	margin-left: 40px;
@@ -110,12 +128,12 @@
     background: #6466ab;
 }
 
-.back:nth-child(even) {
+.sitter:nth-child(even) .back {
     background: #64ab9e;
     color: white;
 }
 
-.back:nth-child(odd) {
+.sitter:nth-child(odd) .back {
     background: #6466ab;
     color: white;
 }
@@ -157,5 +175,10 @@ ul.right{
 
 .bigger .massiveHolder .right {
 	margin-top:30px;
-	font-size: 27px;
+	font-size: 16px;
+}
+
+.contactno {
+	margin-top: 27px;
+	font-size: 18px;
 }
