--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,23 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {
     display: block;
 }
+
+.sidebar::-webkit-scrollbar-track, body::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar, body::-webkit-scrollbar
+{
+    width: 6px;
+    background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar-thumb, body::-webkit-scrollbar-thumb
+{
+    background-color: #000000;
+}
 ol,ul {
     list-style:none;
     margin:0px;
